public/css/player.css
#academics h3,
#academics span {
    display: inline;
    vertical-align: top;
    font-family: 'Open Sans', sans-serif;
    font-size: 16px;
    line-height: 28px;
}

.player-panel {
    margin: 20px;
    /*DEBUG: border: 1px solid black;*/
}

textarea {
    width: 100%;
}

.tab-pane {
    margin: 15px;
}

#player-profile {
    border-left: solid 4px black;
}

#leftMainColumn {
	padding-right: 30px;
	/*height: 60vw;*/
}

#mainContainer {
	/*height:100%;
    border:1px solid black;*/
}

